# clex-functional-accounting

./: .gitignore  requirements.txt  setup.cfg  setup.py  update_lquota.py  update_nci_account.py  update_nci_files_report.py  update_users_and_projects.py
.github/workflows/: common.yml  deploy_functions.yml  lquota.yml  nci_account.yml  nci_files_report.yml  run.yml  user_group_info.yml
lib/: config.py  cosmosdb.py  group_list.py
src/clex_functional_accounting/function/: .funcignore  function_app.py  host.json
src/clex_functional_accounting/ingest_tools/: update_lquota.py  update_nci_account.py  update_nci_files_report.py  update_users_and_projects.py
src/clex_functional_accounting/lib/: config.py  cosmosdb.py  group_list.py  remote_command.py
src/clex_functional_accounting/lib/blob/: __init__.py
src/clex_functional_accounting/lib/cosmosdb/: __init__.py  aio.py
