[metadata]
name = clex_functional_accounting
version = 0.0.1
author = Dale Roberts
author_email = dsroberts@unimelb.edu.au
summary = Accounting reporting based on Azure Functions, Azure Cosmos DB and Github Actions
licence = Apache 2.0

[options]
packages=find_namespace:
package_dir = 
    = src

[options.packages.find]
where = src
include = clex_functional_accounting.lib*, clex_functional_accounting.ingest_tools*

[entry_points]
console_scripts = 
    update_lquota = clex_functional_accounting.ingest_tools.update_lquota:async_main
    update_nci_account = clex_functional_accounting.ingest_tools.update_nci_account:async_main
    update_nci_files_report = clex_functional_accounting.ingest_tools.update_nci_files_report:main
    update_users_and_projects = clex_functional_accounting.ingest_tools.update_users_and_projects:main